Добавил в качестве полноценного примера свой диплом.

--- a/MiKTeX/abstract.tex
+++ b/MiKTeX/abstract.tex
@@ -6,14 +6,17 @@
 \vspace{4\parsep}
 
 Дипломный проект выполнен на 6 листах формата А1 с пояснительной запиской на~\pageref*{LastPage} страницах, без приложений справочного или информационного характера. 
-Пояснительная записка включает \total{section}~глав, \totfig{}~рисунков, \tottab{}~таблиц, \toteq{}~формулы, \totref{}~литературный источник.
+Пояснительная записка включает \total{section}~глав, \totfig{}~рисунков, \tottab{}~таблиц, \toteq{}~формул и \totref{}~литературный источник.
 
-Для достижения цели дипломного проекта была разработана библиотека для платформы Microsoft .NET предназначенная для представления и обучения структуры вероятностной сети по экспериментальным данным.
-В библиотеке реализовано несколько алгоритмов имеющие различные качественные характеристики.
+Целью дипломного проекта является разработка удобного в использовании инструмента, пригодного для решения практических задач, возникающих в реальных проектах, связанных с вероятностным моделированием.
 
-В разделе технико"=экономического обоснования был произведен расчет затрат на создание ПО, а также прибыль от разработки получаемая разработчиком.
-Проведенные расчеты показали экономическую целесообразность проекта.
+Для достижения цели дипломного проекта была разработана библиотека кода для \dotnet{}, предназначенная для представления и обучения структуры вероятностной сети по экспериментальным данным.
+Библиотека может быть использована в реальных проектах, использующих вероятностный подход к решению проблемы.
+В библиотеке реализовано несколько алгоритмов, имеющих различные качественные характеристики.
 
-Пояснительная записка включает раздел по охране труда, в котором была произведена оценка пожарной безопасности на предприятии, где разрабатывался данный дипломный проект.
+В разделе технико"=экономического обоснования был произведён расчёт затрат на создание ПО, а также прибыли от разработки, получаемой разработчиком.
+Проведённые расчёты показали экономическую целесообразность проекта.
+
+Пояснительная записка включает раздел по охране труда, в котором была произведена оценка пожарной безопасности на предприятии, где частично разрабатывался данный дипломный проект.
 
 \clearpage
