--- a/MiKTeX/annotation.tex
+++ b/MiKTeX/annotation.tex
@@ -14,8 +14,11 @@
 Дипломный проект выполнен на 6 листах формата А1 с пояснительной запиской на~\pageref*{LastPage} страницах, без приложений справочного или информационного характера. 
 Пояснительная записка включает \total{section}~глав, \totfig{}~рисунков, \tottab{}~таблиц, \toteq{}~формулы, \totref{}~литературный источник.
 
-Темой дипломного проекта является построение структуры вероятностной сети по данным без участия эксперта.
-Целю проекта является разработка библиотеки кода предназначенной для работы с вероятностными сетями и автоматического вывода структуры сети по данным.
+Целью дипломного проекта является разработка удобного в использовании инструмента, пригодного для решения практических задач, возникающих в реальных проектах, связанных с вероятностным моделированием.
+
+Для достижения цели дипломного проекта была разработана библиотека кода для \dotnet{}, предназначенная для представления и обучения структуры вероятностной сети по экспериментальным данным.
+Библиотека может быть использована в реальных проектах, использующих вероятностный подход к решению проблемы.
+В библиотеке реализовано несколько алгоритмов, имеющих различные качественные характеристики.
 
 Во введении производится ознакомление с проблемой, решаемой в дипломном проекте.
 
@@ -28,9 +31,9 @@
 Описываются его составные части и особенности.
 Приводятся результаты практических испытаний и производится сравнение с существующим ПО.
 
-В четвертой главе производится оценка пожарной безопасности предприятия, на котором разрабатывался данный дипломный проект.
+В четвертой главе производится оценка пожарной безопасности предприятия, на котором частично разрабатывался данный дипломный проект.
 
-В пятой главе производится технико"=экономическое обоснование разработки и производится оценка прогнозируемой прибыли у разработчика от реализации проекта.
+В пятой главе производится технико"=экономическое обоснование разработки.
 
 В заключении подводятся итоги и делаются выводы по дипломному проекту, а также описывается дальнейший план развития проекта.
 
