--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -1,16 +1,308 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: utf8
 
+@MISC{pgm_course,
+  author = {\mbox{Stanford University}},
+  title = {Probabilistic Graphical Models [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: \url{https://www.coursera.org/course/pgm}. --- Дата
+	доступа: 08.05.2013},
+  owner = {mstyura},
+  timestamp = {2013.05.08}
+}
+
+@BOOK{albahari_2012_en,
+  title = {C\# 5.0 in a Nutshell},
+  publisher = {O’Reilly Media, Inc},
+  year = {2012},
+  author = {Joseph Albahari and Ben Albahari},
+  pages = {1062},
+  edition = {5-th},
+  month = {June},
+  owner = {mstyura},
+  timestamp = {2013.03.21}
+}
+
+@INPROCEEDINGS{beinlich1989alarm,
+  author = {Beinlich, I. A. and Suermondt, H. J. and Chavez, R. M. and Cooper,
+	G. F.},
+  title = {{The ALARM Monitoring System: A Case Study with Two Probabilistic
+	Inference Techniques for Belief Networks}},
+  booktitle = {Second European Conference on Artificial Intelligence in Medicine},
+  year = {1989},
+  editor = {Hunter, J. and Cookson, J. and Wyatt, J.},
+  volume = {38},
+  pages = {247--256},
+  address = {Berlin, Germany},
+  publisher = {Springer-Verlag},
+  citeulike-article-id = {1616436},
+  keywords = {alarm, bayesian\_network},
+  posted-at = {2007-09-03 16:53:17},
+  priority = {0}
+}
+
+@MISC{Chickering96learningbayesian,
+  author = {David Maxwell Chickering},
+  title = {Learning Bayesian Networks is NP-Complete},
+  year = {1996},
+  language = {english}
+}
+
+@ARTICLE{Chow68approximatingdiscrete,
+  author = {C. I. Chow and Sexior Member and C. N. Liu},
+  title = {Approximating discrete probability distributions with dependence
+	trees},
+  journal = {IEEE Transactions on Information Theory},
+  year = {1968},
+  volume = {14},
+  pages = {462--467}
+}
+
+@INPROCEEDINGS{Cooper1991,
+  author = {Cooper, Gregory F. and Herskovits, Edward},
+  title = {A Bayesian method for constructing Bayesian belief networks from
+	databases},
+  booktitle = {Proceedings of the Seventh conference on Uncertainty in Artificial
+	Intelligence},
+  year = {1991},
+  series = {UAI'91},
+  pages = {86--94},
+  address = {San Francisco, CA, USA},
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  acmid = {2100674},
+  isbn = {1-55860-203-8},
+  location = {Los Angeles, CA},
+  numpages = {9},
+  url = {http://dl.acm.org/citation.cfm?id=2100662.2100674}
+}
+
+@BOOK{crundwell_2008,
+  title = {Finance for engineers evaluation and funding of capital projects},
+  publisher = {Springer},
+  year = {2008},
+  author = {F. K. Crundwell},
+  pages = {622},
+  address = {London},
+  owner = {mstyura},
+  timestamp = {2013.03.14}
+}
+
+@INPROCEEDINGS{Grunwald05atutorial,
+  author = {Peter Grünwald},
+  title = {A Tutorial Introduction to the Minimum Description Length Principle},
+  booktitle = {Advances in Minimum Description Length: Theory and Applications},
+  year = {2005},
+  publisher = {MIT Press}
+}
+
+@BOOK{harrison_1997,
+  title = {Introduction to Functional Programming},
+  year = {1997},
+  author = {Jonh Harrison},
+  pages = {168},
+  address = {University of Cambridge},
+  month = {December},
+  language = {english},
+  owner = {mstyura},
+  timestamp = {2013.03.22}
+}
+
+@MISC{itechart_2013,
+  author = {iTechArt},
+  title = {Company profile [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: http://www.itechart.com/docs/companyprofile.pdf},
+  address = {Iselin, NJ 08830 USA},
+  language = {english},
+  owner = {mstyura},
+  timestamp = {2013.03.21}
+}
+
+@BOOK{Koller_2009,
+  title = {Probabilistic Graphical Models: Principles and Techniques},
+  publisher = {MIT Press},
+  year = {2009},
+  author = {D. Koller and N. Friedman},
+  pages = {1270}
+}
+
+@ARTICLE{Lam94learningbayesian,
+  author = {Wai Lam and Fahiem Bacchus},
+  title = {Learning Bayesian belief networks: An approach based on the MDL principle},
+  journal = {Computational Intelligence},
+  year = {1994},
+  volume = {10},
+  pages = {269--293},
+  language = {english}
+}
+
+@ARTICLE{Lauritzen_Spiegelhalter88,
+  author = {Lauritzen, S. L. and Spiegelhalter, D. J.},
+  title = {{Local Computations with Probabilities on Graphical Structures and
+	Their Application to Expert Systems}},
+  journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  year = {1988},
+  volume = {50},
+  number = {2},
+  abstract = {{A causal network is used in a number of areas as a depiction of patterns
+	of `influence' among sets of variables. In expert systems it is common
+	to perform `inference' by means of local computations on such large
+	but sparse networks. In general, non-probabilistic methods are used
+	to handle uncertainty when propagating the effects of evidence, and
+	it has appeared that exact probabilistic methods are not computationally
+	feasible. Motivated by an application in electromyography, we counter
+	this claim by exploiting a range of local representations for the
+	joint probability distribution, combined with topological changes
+	to the original network termed `marrying' and `filling-in'. The resulting
+	structure allows efficient algorithms for transfer between representations,
+	providing rapid absorption and propagation of evidence. The scheme
+	is first illustrated on a small, fictitious but challenging example,
+	and the underlying theory and computational aspects are then discussed.}},
+  citeulike-article-id = {236694},
+  citeulike-linkout-0 = {http://dx.doi.org/10.2307/2345762},
+  citeulike-linkout-1 = {http://www.jstor.org/stable/2345762},
+  doi = {10.2307/2345762},
+  issn = {00359246},
+  keywords = {bayesian-networks},
+  posted-at = {2005-06-25 05:09:56},
+  priority = {1},
+  publisher = {Blackwell Publishing for the Royal Statistical Society},
+  url = {http://dx.doi.org/10.2307/2345762}
+}
+
+@INPROCEEDINGS{Rebane87,
+  author = {George Rebane and Judea Pearl},
+  title = {The Recovery of Causal Poly-Trees From Statistical Data},
+  booktitle = {Uncertainty in Artificial Intelligence 3 Annual Conference on Uncertainty
+	in Artificial Intelligence (UAI-87)},
+  year = {1987},
+  pages = {175--182},
+  address = {Amsterdam, NL},
+  publisher = {Elsevier Science}
+}
+
+@ELECTRONIC{fsdg_2010,
+  author = {Microsoft Research and Microsoft Developer Division},
+  month = {April},
+  year = {2010},
+  title = {Draft F\# Component Design Guidelines},
+  language = {english},
+  organization = {Microsoft},
+  owner = {mstyura},
+  timestamp = {2013.03.21}
+}
+
+@BOOK{richter_2012_en,
+  title = {CLR via C\#},
+  publisher = {Microsoft Press},
+  year = {2012},
+  author = {Jeffrey Richter},
+  pages = {896},
+  series = {Microsoft, Developer Reference},
+  address = {One Microsoft Way, Redmond, Washington 98052-6399},
+  edition = {4-th},
+  isbn = {0735667454,9780735667457},
+  owner = {mstyura},
+  timestamp = {2013.03.20}
+}
+
+@INCOLLECTION{robinson_1977,
+  author = {Robinson, R. W.},
+  title = {{Counting unlabeled acyclic digraphs}},
+  booktitle = {Combinatorial Mathematics V},
+  publisher = {Springer Berlin Heidelberg},
+  year = {1977},
+  editor = {Little, CharlesH},
+  volume = {622},
+  series = {Lecture Notes in Mathematics},
+  chapter = {2},
+  pages = {28--43},
+  abstract = {{The previously known ways to count acyclic digraphs, both labeled
+	and unlabeled, are reviewed. Then a new method of enumerating unlabeled
+	acyclic digraphs is developed. It involves computing the sum of the
+	cyclic indices of the automorphism groups of the acyclic digraphs,
+	achieving a considerable gain in efficiency through an application
+	of the inclusion-exclusion principle. Numerical results are reported
+	on, and a table of the numbers of unlabeled acyclic digraphs on up
+	to 18 points is included.}},
+  citeulike-article-id = {8426666},
+  citeulike-linkout-0 = {http://dx.doi.org/10.1007/bfb0069178},
+  citeulike-linkout-1 = {http://www.springerlink.com/content/1716582847315l87},
+  citeulike-linkout-2 = {http://link.springer.com/chapter/10.1007/BFb0069178},
+  doi = {10.1007/bfb0069178},
+  isbn = {978-3-540-08524-9},
+  keywords = {digraphs, directed-graphs, enumeration, graph-theory, work},
+  posted-at = {2010-12-15 08:45:31},
+  url = {http://dx.doi.org/10.1007/bfb0069178}
+}
+
+@INPROCEEDINGS{Spohn94onthe,
+  author = {Wolfgang Spohn and Abteilung Philosophie and D Bielefeld},
+  title = {On the Properties of Conditional Independence},
+  booktitle = {Suppes: Scientific philosopher},
+  year = {1994},
+  pages = {173--194},
+  publisher = {Kluwer}
+}
+
+@INPROCEEDINGS{Suzuki93,
+  author = {Joe Suzuki },
+  title = {A Construction of Bayesian Networks from Databases Based on an MDL
+	Principle},
+  booktitle = {Proceedings of the Ninth Conference Annual Conference on Uncertainty
+	in Artificial Intelligence (UAI-93)},
+  year = {1993},
+  pages = {266--273},
+  address = {San Francisco, CA},
+  publisher = {Morgan Kaufmann}
+}
+
+@BOOK{sicp_2006_ru,
+  title = {Структура и интерпретация компьютерных программ},
+  publisher = {Добросвет},
+  year = {2006},
+  author = {Харольд Абельсон and Джеральд Джей Сассман and Джули Сассман},
+  pages = {608},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.20}
+}
+
+@BOOK{volosevich_cs_2011,
+  title = {Язык C\# и основы платформы .NET: Учебно"=метод. пособие по курсу
+	<<Избранные главы информатики>> для студ. спец. \mbox{I-31~03~04}
+	<<Информатика>> всех форм обуч.},
+  year = {2006},
+  author = {А. А. Волосевич},
+  pages = {60},
+  address = {Минск},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.21}
+}
+
 @BOOK{guk_1999,
   title = {Процессоры Pentium II, Pentium Pro и просто Pentium},
   publisher = {Питер Ком},
   year = {1999},
   author = {М. Гук},
   pages = {288},
-  address = {СПб.},
   language = {russian},
   owner = {mstyura},
   timestamp = {2013.02.20}
+}
+
+@ARTICLE{pfp_funelem_issue3_2009,
+  author = {Е. Кирпичёв},
+  title = {Элементы функциональных языков},
+  journal = {Практика функционального программирования},
+  year = {2009},
+  pages = {196},
+  number = {3},
+  month = {Декабрь},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.22}
 }
 
 @BOOK{kluev_1989,
@@ -38,17 +330,77 @@
   timestamp = {2013.02.20}
 }
 
-@BOOK{kulinovich_2010,
-  title = {Основы научного цитирования : метод. пособие для студентов и магистрантов,
-	обучающихся по спец. 1"---23 01 04 <<Психология>>},
-  publisher = {БГУ},
+@ARTICLE{fsharp_pfp_issue_5,
+  author = {Е. Лазин and М. Моисеев and Д. Сорокин},
+  title = {Введение в F\#},
+  journal = {Практика функционального программирования},
   year = {2010},
-  author = {Т. О. Кулинкович},
-  pages = {58},
+  pages = {149},
+  number = {5},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.21}
+}
+
+@BOOK{mcconnell_2005,
+  title = {Совершенный код. Мастер"=класс / Пер. с англ.},
+  publisher = {Издательско"=торговый дом <<Русская редакция>>},
+  year = {2005},
+  author = {С. Макконнелл},
+  pages = {896},
+  address = {СПб.},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.18}
+}
+
+@BOOK{marchenko_2007,
+  title = {Основы программирования на C\# 2.0},
+  publisher = {БИНОМ. Лаборатория знаний, Интернет"=университет информационных технологий
+	"--- ИНТУИТ.ру},
+  year = {2007},
+  author = {А. Л. Марченко},
+  pages = {552},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.20}
+}
+
+@BOOK{michailov_2011,
+  title = {Пожарная безопасность в офисе},
+  publisher = {Альфа-Пресс},
+  year = {2011},
+  author = {Ю. М. Михайлов},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.02.26}
+}
+
+@BOOK{michnuk_2009,
+  title = {Охрана труда : учебник [утв. МО РБ]},
+  publisher = {ИВЦ Минфина},
+  year = {2009},
+  author = {Т. Ф. Михнюк},
+  pages = {345},
   address = {Минск},
   language = {russian},
   owner = {mstyura},
-  timestamp = {2013.03.19}
+  timestamp = {2013.02.26}
+}
+
+@BOOK{yashin_2009,
+  title = {Охрана труда, экологическая безопасность, энергосбережение : метод.
+	пособие по выполнению дипломных проектов (работ)},
+  publisher = {БГУИР},
+  year = {2009},
+  editor = {Т. Ф. Михнюка},
+  author = {Т. Ф. Михнюк AND И. С. Асаенок AND И. И. Кирвель AND А. И. Навоша
+	AND К. Д. Яшин},
+  pages = {36},
+  address = {Минск},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.02.26}
 }
 
 @BOOK{Morozov_2011,
@@ -56,10 +408,100 @@
   publisher = {ЯрГУ им. П.Г. Демидова},
   year = {2011},
   author = {Д.К. Морозов and А.Я. Пархоменко},
-  address = {Ярославль},
   language = {russian},
   owner = {mstyura},
   timestamp = {2013.02.20}
+}
+
+@BOOK{palicyn_2006,
+  title = {Технико-экономическое обоснование дипломных проектов: Метод. пособие
+	для студ. всех спец. БГУИР. В 4-х ч. Ч. 4: Проекты программного обеспечения},
+  publisher = {БГУИР},
+  year = {2006},
+  author = {В. А. Палицын},
+  pages = {76},
+  address = {Минск},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.03}
+}
+
+@BOOK{richter_2012_ru,
+  title = {CLR via С\#. Программирование на платформе Microsoft .NET Framework
+	4.0 на языке С\#. 3-е изд.},
+  publisher = {Питер},
+  year = {2012},
+  author = {Дж. Рихтер},
+  pages = {928},
+  address = {СПб.},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.20}
+}
+
+@BOOK{richter_2007_ru,
+  title = {CLR via C\#. Программирование на платформе Microsoft .NET Framework
+	2.0 на языке C\#},
+  publisher = {Питер, Русская Редакция},
+  year = {2007},
+  author = {Джеффри Рихтер},
+  pages = {656},
+  address = {СПб.},
+  edition = {2-е},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.20}
+}
+
+@BOOK{sinilov_2010,
+  title = {Системы охранной, пожарной и охранно-пожарной сигнализации : учебник
+	для нач. проф. образования},
+  publisher = {Издательский центр <<Академия>>},
+  year = {2010},
+  author = {В. Г. Синилов},
+  pages = {512},
+  address = {М.},
+  edition = {5-е},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.15}
+}
+
+@ARTICLE{terentyev_2006,
+  author = {А. Н. Терентьев and П. И. Бидюк},
+  title = {Эвристический метод построения байесовых сетей},
+  journal = {Математические машины и системы},
+  year = {2006},
+  number = {3},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.05.07}
+}
+
+@CONFERENCE{terehov_2003,
+  author = {С. А. Терехов},
+  title = {Введение в байесовы сети},
+  booktitle = {Научная cессия МИФИ--2003. V Всероссийская научно-техническая Конференция
+	<<Нейроинформатика--2003>>: Лекции по нейроинформатике. Часть~1.},
+  year = {2003},
+  pages = {188},
+  address = {М.},
+  publisher = {МИФИ},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.30}
+}
+
+@BOOK{sharovar_1979,
+  title = {Устройства и системы пожарной сигнализации},
+  publisher = {Стройиздат},
+  year = {1979},
+  author = {Ф. И. Шаровар},
+  pages = {271},
+  address = {М.},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.14}
 }
 
 @BOOK{microproc_1988,
@@ -76,6 +518,16 @@
   timestamp = {2013.02.20}
 }
 
+@MISC{belcalendar_2013,
+  title = {Календарь праздников на 2013 год для Беларуси [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: \url{http://calendar.by/2013/\#bkm}. --- Дата доступа:
+	05.03.2013},
+  language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.05}
+}
+
 @MISC{cite_webpage,
   title = {How can I use BibTeX to cite a web page? [Электронный ресурс]},
   howpublished = {Электронные данные},
@@ -83,5 +535,26 @@
   language = {english},
   owner = {mstyura},
   timestamp = {2013.02.20}
+}
+
+@MISC{csharp_wiki_2013_ru,
+  title = {C Sharp [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: \url{http://ru.wikipedia.org/wiki/C\_Sharp}. --- Дата
+	доступа: 22.03.2013},
+  owner = {mstyura},
+  timestamp = {2013.03.22}
+}
+
+@STANDARD{ecma_335,
+  title = {Common Language Infrastructure (CLI). Partitions I to VI.},
+  organization = {ECMA International},
+  language = {english},
+  month = {June},
+  year = {2012},
+  url = {http://www.ecma-international.org/publications/standards/Ecma-335.htm},
+  edition = {6-th},
+  owner = {mstyura},
+  timestamp = {2013.03.19}
 }
 
