--- a/MiKTeX/diploma_title.tex
+++ b/MiKTeX/diploma_title.tex
@@ -2,7 +2,8 @@
   \begin{center}
     Министерство образования Республики Беларусь\\[1em]
     Учреждение образования\\
-    БЕЛОРУССКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ ИНФОРМАТИКИ И РАДИОЭЛЕКТРОНИКИ\\[1em]
+    БЕЛОРУССКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ \\
+    ИНФОРМАТИКИ И РАДИОЭЛЕКТРОНИКИ\\[1em]
 
     \begin{minipage}{\textwidth}
       \begin{flushleft}
@@ -24,24 +25,24 @@
     {ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}\\
     {к дипломному проекту}\\
     {на тему:}\\[1em]
-    \textbf{\large ТЕМА ДИПЛОМНОГО ПРОЕКТА}\\[1em]
+    \textbf{\large АЛГОРИТМЫ ПОСТРОЕНИЯ ВЕРОЯТНОСТНЫХ СЕТЕЙ}\\[1em]
 
 
-    {БГУИР ДП \textbf{1-31 03 04 07 0xx} ПЗ}\\[2em]
+    {БГУИР ДП \textbf{1-31 03 04 07 093} ПЗ}\\[2em]
     
     \begin{tabular}{ p{0.65\textwidth}p{0.25\textwidth} }
-      Студент: & И.\,О.~Фамилия \\
-      Руководитель: & И.\,О.~Фамилия \\
+      Студент: & Ю.\,А.~Ярошевич \\
+      Руководитель: & А.\,А.~Волосевич \\
       Консультанты: &\\
-      \hspace*{3ex}\emph{от кафедры информатики} & И.\,О.~Фамилия \\
-      \hspace*{3ex}\emph{по экономической части} & И.\,О.~Фамилия \\
-      \hspace*{3ex}\emph{по охране труда} & И.\,О.~Фамилия \\
-      Нормоконтроллёр: & И.\,О.~Фамилия \\
+      \hspace*{3ex}\emph{от кафедры информатики} & А.\,А.~Волосевич \\
+      \hspace*{3ex}\emph{по экономической части} & А.\,В.~Рябов \\
+      \hspace*{3ex}\emph{по охране труда} & Е.\,А.~Колосова \\
+      Нормоконтролёр: & С.\,И.~Сиротко\\
       & \\
       Рецензент: &
     \end{tabular}
     
     \vfill
-    {\normalsize Минск 20yy}
+    {\normalsize Минск 2013}
   \end{center}
 \end{titlepage}
