--- a/MiKTeX/practice_title.tex
+++ b/MiKTeX/practice_title.tex
@@ -15,18 +15,18 @@
 
         \noindent
         \begin{tabular}{p{0.5\textwidth}p{0.4\textwidth}}
-            & Выполнил студент гр. 000000 \\
-            & Петров П.\,П. \\[1cm]
+            & Выполнил студент гр. 852001 \\
+            & Ярошевич Ю.\,А. \\[1cm]
 
             & Руководитель практики от \\
             & предприятия: \\
             & начальник отдела \\
-            & Сидоров С.\,С. \\[1cm]
+            & Ковалёв А.\,М. \\[1cm]
 
             & Руководитель практики \\
             & от университета: \\
             & доцент кафедры информатики \\
-            & Иванов И.\,И. \\
+            & Волосевич А.\,А. \\
         \end{tabular}
 
         \vfill
