Removed includepdf command from diploma_report.tex. Moved dropbox publishing to separate target in make file.

--- a/MiKTeX/diploma_report.tex
+++ b/MiKTeX/diploma_report.tex
@@ -24,7 +24,9 @@
 
 \input{references}
 
-% Ведомость документов, сделана в Visio, сохранена в pdf
-\includepdf[pages={-}]{documents_list.pdf}
+% \includepdf позволяет включить в результирующий pdf документ часть другого pdf документа, сделанного
+% например не с помощью TeX. Бывает полезно, если какие-то диаграммны нарисованы, например, с помощью 
+% Microoft Office и сохранены в pdf.
+%\includepdf[pages={-}]{documents_list.pdf}
 
 \end{document}
